--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,6 @@
   "extends": [
     "next/core-web-vitals",
     "next/typescript"
-  ]
+  ],
+  "rules": { "@typescript-eslint/no-empty-object-type": "off" }
 }
